--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "dependencies": {
     "ant-design-vue": "^2.0.0",
     "core-js": "^3.8.1",
+    "less": "^4.1.1",
+    "less-loader": "^8.0.0",
     "vue": "^3.0.4",
-    "vue-class-component": "^8.0.0-0"
+    "vue-class-component": "^8.0.0-0",
+    "vue-router": "^4.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
@@ -26,6 +29,8 @@
     "@vue/eslint-config-typescript": "^7.0.0",
     "eslint": "^7.15.0",
     "eslint-plugin-vue": "^7.2.0",
+    "node-sass": "^5.0.0",
+    "sass-loader": "^11.0.1",
     "ts-loader": "^8.0.16",
     "typescript": "^4.1.3",
     "vue-loader": "^16.1.2",
